<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_streak"
    android:background="@color/successAlpha"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_thunder"
            android:contentDescription="@string/streak" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/you_are_on_a_streak"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="3 correct answers in a row"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btnViewSolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_solution"
                android:textColor="@android:color/black"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/textWhite"/>

            <Button
                android:id="@+id/btnNextQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_question"
                android:textColor="@color/textWhite"
                android:backgroundTint="@color/primaryColor"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>