<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feed.FeedFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/primaryColor" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/marks"
            android:textColor="@color/textColorOpposite"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
            app:layout_constraintStart_toEndOf="@id/ivLogo"
            app:layout_constraintTop_toTopOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvChapter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/textColorOpposite"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivLogo"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            android:text="@string/gravitation" />

        <TextView
            android:id="@+id/tvNumOfQuestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/ivLogo"
            app:layout_constraintTop_toBottomOf="@+id/tvChapter"/>

        <TextView
            android:id="@+id/tvShowingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:text="@string/showing"
            android:textColor="@color/textColorOpposite"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/spinnerFilter"
            app:layout_constraintTop_toBottomOf="@+id/tvNumOfQuestions"
            tools:layout_editor_absoluteX="40dp" />

<!--        <TextView-->
<!--            android:id="@+id/tvFilter"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="24dp"-->
<!--            android:textColor="@color/textColorOpposite"-->
<!--            android:textSize="14sp"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/tvShowingText"-->
<!--            tools:text="Not Attempted" />-->

        <Spinner
            android:id="@+id/spinnerFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvShowingText"
            app:layout_constraintBottom_toBottomOf="@id/tvShowingText"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:shimmer_auto_start="false"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvShowingText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include layout="@layout/item_questions_shimmer"/>
                <include layout="@layout/item_questions_shimmer"/>
                <include layout="@layout/item_questions_shimmer"/>
                <include layout="@layout/item_questions_shimmer"/>
                <include layout="@layout/item_questions_shimmer"/>
                <include layout="@layout/item_questions_shimmer"/>
                <include layout="@layout/item_questions_shimmer"/>
                <include layout="@layout/item_questions_shimmer"/>
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuestions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            tools:listitem="@layout/item_question_preview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shimmer_view_container" />


        <LinearLayout
            android:id="@+id/ll_nothing_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvQuestions"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:cardCornerRadius="75dp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/noting_found"
                    android:src="@drawable/ic_empty_results" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="36dp"
                android:textAlignment="center"
                android:text="@string/oops_nothing_found"/>

            <Button
                android:id="@+id/btnClearFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/clear_filter"
                android:backgroundTint="@color/primaryColor"/>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>