<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/clControls"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <ImageButton
                android:id="@+id/ibBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/back_button"
                android:padding="0dp"
                android:src="@drawable/button_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvChapter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/textColorOpposite"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ibBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ibBack"
                app:layout_constraintTop_toTopOf="@+id/ibBack"
                tools:text="Gravitation" />

            <TextView
                android:id="@+id/tvQuestionNumberAndType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ibBack"
                app:layout_constraintTop_toBottomOf="@+id/tvChapter"
                tools:text="Q1(Single Correct)" />

            <WebView
                android:id="@+id/wvQuestion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvQuestionNumberAndType"
                app:layout_constraintTop_toBottomOf="@+id/tvQuestionNumberAndType" />

            <TextView
                android:id="@+id/tvQuestionSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/primaryColorAccent"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="4dp"
                android:textColor="@color/primaryColor"
                app:layout_constraintStart_toStartOf="@id/wvQuestion"
                app:layout_constraintTop_toBottomOf="@id/wvQuestion"
                tools:text="JEE Main 2019" />

            <LinearLayout
                android:id="@+id/ll_options"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvQuestionSource">

                <include
                    android:id="@+id/option_1"
                    layout="@layout/item_option" />

                <include
                    android:id="@+id/option_2"
                    layout="@layout/item_option" />

                <include
                    android:id="@+id/option_3"
                    layout="@layout/item_option" />

                <include
                    android:id="@+id/option_4"
                    layout="@layout/item_option" />

            </LinearLayout>

            <!--            <androidx.recyclerview.widget.RecyclerView-->
            <!--                android:id="@+id/rvOptions"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="12dp"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintHorizontal_bias="0.5"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toBottomOf="@id/tvQuestionSource"-->
            <!--                tools:itemCount="4"-->
            <!--                tools:listitem="@layout/item_option" />-->

            <TextView
                android:id="@+id/tvSolutionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/solution"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/ibBack"
                app:layout_constraintTop_toBottomOf="@+id/ll_options" />

            <WebView
                android:id="@+id/wvSolution"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ibBack"
                app:layout_constraintTop_toBottomOf="@+id/tvSolutionText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/theme">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/previous_question"
            android:padding="0dp"
            android:src="@drawable/button_left"
            app:layout_constraintBottom_toBottomOf="@id/btn_check_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_check_answer"/>

        <Button
            android:id="@+id/btn_check_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/check_answer"
            android:textSize="16sp"
            android:enabled="false"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ibNext"
            app:layout_constraintStart_toEndOf="@+id/ibPrevious"
            app:layout_constraintTop_toTopOf="@id/divider" />

        <ImageButton
            android:id="@+id/ibNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/next_question"
            android:padding="0dp"
            android:src="@drawable/button_right"
            app:layout_constraintBottom_toBottomOf="@id/btn_check_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_check_answer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/coordinatorLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"/>

    <include
        layout="@layout/layout_streak"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/include_streak"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>

